--- a/index.html
+++ b/index.html
@@ -340,12 +340,12 @@
 
         // GANTI DENGAN KONFIGURASI FIREBASE ANDA
         const firebaseConfig = {
-            apiKey: "YOUR_API_KEY",
-            authDomain: "YOUR_AUTH_DOMAIN",
-            projectId: "YOUR_PROJECT_ID",
-            storageBucket: "YOUR_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-            appId: "YOUR_APP_ID"
+          apiKey: "AIzaSyAL7sRxl4MdHHuqVIC5kxu3CNVhdkhns-g",
+          authDomain: "jurnal-guru-cloud.firebaseapp.com",
+          projectId: "jurnal-guru-cloud",
+          storageBucket: "jurnal-guru-cloud.firebasestorage.app",
+          messagingSenderId: "719638088062",
+          appId: "1:719638088062:web:b2dfe553fa245700b8cb2f"
         };
 
         // Initialize Firebase
